results/SVCOMP/conversational/log-Verifier-2024_03_18_02_37_11.txt
import java.util.Random;

public final class Verifier {
  //@ ensures condition ==> \nothing;
  public static void assume(boolean condition) {
    if (!condition) {
      Runtime.getRuntime().halt(1);
    }
  }

  //@ ensures \result == false || \result == true;
  public static boolean nondetBoolean() {
    return new Random().nextBoolean();
  }

  //@ ensures \result >= Byte.MIN_VALUE && \result <= Byte.MAX_VALUE;
  public static byte nondetByte() {
    return (byte) (new Random().nextInt());
  }

  //@ ensures \result >= Character.MIN_VALUE && \result <= Character.MAX_VALUE;
  public static char nondetChar() {
    return (char) (new Random().nextInt());
  }

  //@ ensures \result >= Short.MIN_VALUE && \result <= Short.MAX_VALUE;
  public static short nondetShort() {
    return (short) (new Random().nextInt());
  }

  //@ ensures true;
  public static int nondetInt() {
    return new Random().nextInt();
  }

  //@ ensures true;
  public static long nondetLong() {
    return new Random().nextLong();
  }

  //@ ensures \result >= 0.0f && \result < 1.0f;
  public static float nondetFloat() {
    return new Random().nextFloat();
  }

  //@ ensures \result >= 0.0 && \result < 1.0;
  public static double nondetDouble() {
    return new Random().nextDouble();
  }

  //@ ensures \result != null && \result.length() >= 0;
  public static String nondetString() {
    Random random = new Random();
    int size = random.nextInt();
    assume(size >= 0);
    byte[] bytes = new byte[size];
    random.nextBytes(bytes);
    return new String(bytes);
  }
}
/home/max/Documents/JMLGPT/tmp/Verifier.java:4: error: incompatible types: <none> cannot be converted to boolean
  //@ ensures condition ==> \nothing;
                            ^
1 error

import java.util.Random;

public final class Verifier {
  //@ ensures condition;
  public static void assume(boolean condition) {
    if (!condition) {
      Runtime.getRuntime().halt(1);
    }
  }

  //@ ensures \result == false || \result == true;
  public static boolean nondetBoolean() {
    return new Random().nextBoolean();
  }

  //@ ensures \result >= Byte.MIN_VALUE && \result <= Byte.MAX_VALUE;
  public static byte nondetByte() {
    return (byte) (new Random().nextInt());
  }

  //@ ensures \result >= Character.MIN_VALUE && \result <= Character.MAX_VALUE;
  public static char nondetChar() {
    return (char) (new Random().nextInt());
  }

  //@ ensures \result >= Short.MIN_VALUE && \result <= Short.MAX_VALUE;
  public static short nondetShort() {
    return (short) (new Random().nextInt());
  }

  //@ ensures true;
  public static int nondetInt() {
    return new Random().nextInt();
  }

  //@ ensures true;
  public static long nondetLong() {
    return new Random().nextLong();
  }

  //@ ensures \result >= 0.0f && \result < 1.0f;
  public static float nondetFloat() {
    return new Random().nextFloat();
  }

  //@ ensures \result >= 0.0 && \result < 1.0;
  public static double nondetDouble() {
    return new Random().nextDouble();
  }

  //@ ensures \result != null && \result.length() >= 0;
  public static String nondetString() {
    Random random = new Random();
    int size = random.nextInt();
    assume(size >= 0);
    byte[] bytes = new byte[size];
    random.nextBytes(bytes);
    return new String(bytes);
  }
}
